<resources>
    <string name="app_name">Habbit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="habit_title">Habit Title</string>
    <string name="habit_reason">Habit Reason</string>
    <string name="habit_date">habit date</string>
    <string name="habit_event_comment">Comments</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="all_habits">All Habits</string>
    <string name="view_habit_events"><u>View Habit Events</u></string>
    <string name="occurs_on">Occurs On</string>
    <string name="start_date">Start Date</string>
    <string name="dd_mm_yy">yyyy-mm-dd</string>
    <string name="comments_optional">Comments (optional)</string>
    <string name="scheduled_for">Scheduled for:</string>
    <string name="example_schedule">Monday, Tuesday, Wednesday</string>
</resources>